# noise

./: makenoise.sh  noise.h
include/clang/Basic/: Attr.td  NoiseAttr.h
lib/Basic/: CMakeLists.txt  NoiseAttr.cpp
lib/CodeGen/: BackendUtil.cpp  CGDecl.cpp  CGNoise.cpp  CGNoise.h  CGStmt.cpp  CMakeLists.txt  CodeGenAction.cpp  CodeGenFunction.cpp  CodeGenFunction.h  LoopAnalysis.cpp  LoopAnalysis.h  Makefile  NoiseAttrParser.cpp  NoiseAttrParser.h  NoiseFusion.cpp  NoiseFusion.h  NoiseInliner.cpp  NoiseInliner.h  NoiseOptimization.cpp  NoiseOptimization.h  NoiseOptimizer.cpp  NoiseOptimizer.h  NoiseSpecializer.cpp  NoiseSpecializer.h  NoiseWFVWrapper.cpp  NoiseWFVWrapper.h
lib/Parse/: ParseStmt.cpp
lib/Sema/: CMakeLists.txt  NoiseAttr.cpp  NoiseAttr.h  SemaDeclAttr.cpp  SemaStmtAttr.cpp
tools/: Makefile
tools/driver/: Makefile
